--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,14 @@
 <body>
 
 <div class="search-bar">
- <input type="text" placeholder="find wishlist" size="20">
+    <form action="/search" method="post">
+        <input type="hidden" name="ID" th:value="${Wishlists.ID}">
+
+        <label for="search_field">Search Wishlists</label>
+        <input id="search_field" name="FirstName" th:value="${Wishlists.FirstName}">
+
+        <button type="submit">Search</button>
+    </form>
 </div>
 
 </body>
