ændret html skrift og fået table down

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,19 +11,19 @@
 <div style="background-color: white">
 
   <div>
-<img class="logocorner" src="/static/images/sky.png" th:src="@{/images/skyen.png}" width="155,04" height="32,64">
+    <img class="logocorner" src="/static/images/skyen.png" th:src="@{/images/skyen.png}" width="155,04" height="32,64">
   </div>
   <div>
-<ul class="menubarcorner">
-  <li><a class="active" href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
-</ul>
+    <ul class="menubarcorner">
+      <li><a class="active" href="#home">Home</a></li>
+      <li><a href="#news">Ønsker</a></li>
+      <li><a href="#contact">Kontakt os</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
   </div>
 </div>
 
-<table class="center" table style="background-color: lightgrey; padding-top: 90px">
+<table class="center" table style="background-color: lightgrey; margin-top:50px">
   <tr>
     <th>Ønskeliste navn</th>
     <th>ønskliste nr</th>
