--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -23,7 +23,7 @@
   </div>
 </div>
 
-<table class="center" table style="background-color: lightgrey; margin-top:50px">
+<table class="center" table style="background-color: cornflowerblue; margin-top:50px">
   <tr>
     <th>Ønskeliste navn</th>
     <th>ønskliste nr</th>
@@ -34,7 +34,6 @@
     <td> <span th:text="${w.wish_user}">user</span> </td>
     <td> <span th:text="${w.wish_id}">id</span> </td>
     <td> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">tryk her for at se ønsker</a> </td>
-
   </tr>
 </table>
 
