--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -31,7 +31,7 @@
     <th>See wishes in list</th>
 
   </tr>
-  <tr th:each="w : ${wishlist}">
+  <tr th:each="w : ${wishlists}">
     <td> <span th:text="${w.wishlist_name}">Name</span> </td>
     <td> <span th:text="${w.wishlist_userId}">id</span> </td>
     <td> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Press to see wishes</a> </td>
