--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>hey</title>
-  <link rel="stylesheet" th:href="@{css/myStyles.css}" href="../../static/css/myStyles.css"/>
+  <link rel="stylesheet" th:href="@{/css/myStyles.css}" href="../../static/css/myStyles.css"/>
 
 
 
@@ -34,7 +34,7 @@
   <tr th:each="w : ${wishlists}">
     <td> <span th:text="${w.wishlist_name}">Name</span> </td>
     <td> <span th:text="${w.wishlist_userId}">id</span> </td>
-    <td> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Press to see wishes</a> </td>
+    <td> <span> <a th:href="@{'/showWishes/' + ${w.wishlistId}}">>Press to see wishes</a> </span> </td>
   </tr>
 </table>
 
