Fixet create wish html

--- a/src/main/resources/templates/html/wishlistWishes.html
+++ b/src/main/resources/templates/html/wishlistWishes.html
@@ -44,8 +44,9 @@
 
     <form action="/create" method="post">
         <tr>
-            <td> <input id="wishlist-name" navn="navn" placeholder="Wishlist name"> </td>
-            <td>   <button type="submit">Create wishlist</button>
+            <td> <input id="wish-name" navn="navn" placeholder="Wish/product name"> </td>
+            <td> <input id="wish-price" navn="navn" placeholder="Wish price"> </td>
+            <td>   <button type="submit">Create wish</button>
             </td>
         </tr>
 </table>
