Corrected some HTML

--- a/src/main/resources/templates/html/wishlistWishes.html
+++ b/src/main/resources/templates/html/wishlistWishes.html
@@ -35,7 +35,7 @@
 
            <td> <span th:text="${w.wishID}">Id</span> </td>
         <td> <span th:text="${w.wish_name}">Name</span></td>
-        <td>  <span th:text="${w.wish_price}">Price</span></td>
+        <td>  <span th:text="${w.wish_price}">Price</span> kr.- </td>
         <td>   <span th:text="${w.wishlistID}">WishlistID</span></td>
     </tr>
 </table>
