rettet i index html

--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -42,9 +42,8 @@
 
   <form action="/create" method="post">
     <tr>
-      <td> <input id="wishlist-name" navn="navn" placeholder="Wishlist name"> </td>
-      <td>   <button type="submit">Create wishlist</button>
-      </td>
+      <td> <input id="wishlist-name" name="wishlist_name" placeholder="Wishlist name"> </td>
+      <td>   <button type="submit">Create wishlist</button> </td>
     </tr>
 </table>
 
