--- a/src/main/resources/templates/html/wishlistWishes.html
+++ b/src/main/resources/templates/html/wishlistWishes.html
@@ -29,12 +29,16 @@
         <th>Wish ID</th>
         <th>Wish Name</th>
         <th>Price</th>
-        <th>Is Reserved</th>
+
     </tr>
     <tr th:each="w : ${wishes}">
         <td> <span th:text="${w.wishID}">Id</span> </td>
         <td> <span th:text="${w.wish_name}">Name</span></td>
         <td> <span th:text="${w.wish_price}">Price</span> kr.- </td>
+        <td> <span th:text="${w.wish_IsReserved}">Price</span> kr.- </td>
+        <td> <span> <a th:href="@{'/updateWish/' + ${w.wishID}}">Update</a> </span> </td>
+        <td> <span> <a th:href="@{'/deleteWish/' + ${w.wishID}}">Delete</a> </span> </td>
+        <td> <span> <a th:href="@{'/reserveWish/' + ${w.wishID}}">Reserve</a> </span> </td>
     </tr>
 </table>
 
