--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -27,7 +27,7 @@
 <table class="center" table style="background-color: cornflowerblue; margin-top:50px">
   <tr>
     <th>Wishlist name</th>
-    <th>Wishlist nr.</th>
+    <th>UserID</th>
     <th>See wishes in list</th>
 
   </tr>
