--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -26,13 +26,12 @@
     <th>UserID</th>
     <th>See wishes in list</th>
     <th>Delete wish</th>
-
   </tr>
   <tr th:each="w : ${wishlists}">
-    <td> <span th:text="${w.wishlist_name}">Name</span> </td>
-    <td> <span th:text="${w.wishlist_userId}">id</span> </td>
-    <td> <span> <a th:href="@{'/showWishes/' + ${w.wishlistId}}">>Press to see wishes</a> </span> </td>
-    <td> <span> <a th:href="@{'/deleteWishList/' + ${w.wishlistId}}">>Press to delete wishlist</a> </span> </td>
+    <td> <span th:text="${w.name}">Name</span> </td>
+    <td> <span th:text="${w.userId}">id</span> </td>
+    <td> <span> <a th:href="@{'/showWishes/' + ${w.id}}">>Press to see wishes</a> </span> </td>
+    <td> <span> <a th:href="@{'/deleteWishList/' + ${w.id}}">>Press to delete wishlist</a> </span> </td>
 
 
   </tr>
