--- a/src/main/resources/templates/html/wishlistWishes.html
+++ b/src/main/resources/templates/html/wishlistWishes.html
@@ -32,13 +32,11 @@
 
     </tr>
     <tr th:each="w : ${wishes}">
-        <td> <span th:text="${w.wishID}">Id</span> </td>
-        <td> <span th:text="${w.wish_name}">Name</span></td>
-        <td> <span th:text="${w.wish_price}">Price</span> kr.- </td>
-        <td> <span>Reserved</span> kr.- </td>
-        <td> <span> <a th:href="@{'/updateWish/' + ${w.wishID}}">Update</a> </span> </td>
-        <td> <span> <a th:href="@{'/deleteWish/' + ${w.wishID}}">Delete</a> </span> </td>
-        <td> <span> <a th:href="@{'/reserveWish/' + ${w.wishID}}">Reserve</a> </span> </td>
+        <td> <span th:text="${w.id}">Id</span> </td>
+        <td> <span th:text="${w.name}">Name</span></td>
+        <td> <span th:text="${w.price}">Price</span> kr.- </td>
+        <td> <span> <a th:href="@{'/updateWish/' + ${w.id}}">Update</a> </span> </td>
+        <td> <span> <a th:href="@{'/deleteWish/' + ${w.id}}">Delete</a> </span> </td>
     </tr>
 </table>
 
