--- a/src/main/resources/templates/html/updateWish.html
+++ b/src/main/resources/templates/html/updateWish.html
@@ -30,7 +30,7 @@
     <tr>
       <td> <input id="wish-name" name="name" th:value="${name}"> </td>
       <td> <input id="wish-price" name="price" th:value="${price}">
-            <input type="hidden" id="" name="wishId" th:attr="value=${wishId}">
+            <input type="hidden" id="wishId" name="wishId" th:attr="value=${wishId}">
       </td>
       <td>  <button type="submit">Update wish</button>  </td>
     </tr>
