Added a few text fixes

--- a/src/main/resources/templates/html/wishlistWishes.html
+++ b/src/main/resources/templates/html/wishlistWishes.html
@@ -16,8 +16,8 @@
     </div>
     <div>
         <ul class="menubarcorner">
-            <li><a class="active" href="/">Home</a></li>
-            <li><a href="/">Wishlist</a></li>
+            <li><a  href="/">Home</a></li>
+            <li><a class="active" href="/">Wishlist</a></li>
             <li><a href="#contact">Contact Us</a></li>
             <li><a href="#about">About us</a></li>
         </ul>
