--- a/src/main/resources/templates/html/index.html
+++ b/src/main/resources/templates/html/index.html
@@ -30,8 +30,8 @@
   <tr th:each="w : ${wishlists}">
     <td> <span th:text="${w.name}">Name</span> </td>
     <td> <span th:text="${w.userId}">id</span> </td>
-    <td> <span> <a th:href="@{'/showWishes/' + ${w.id}}">>Press to see wishes</a> </span> </td>
-    <td> <span> <a th:href="@{'/deleteWishList/' + ${w.id}}">>Press to delete wishlist</a> </span> </td>
+    <td> <span> <a th:href="@{'/showWishes/' + ${w.id}}">View Wishes</a> </span> </td>
+    <td> <span> <a th:href="@{'/deleteWishList/' + ${w.id}}">Delete Wishlist</a> </span> </td>
 
 
   </tr>
